feat: serve static html with styles from public

--- a/05-basic-expressjs/views/404.html
+++ b/05-basic-expressjs/views/404.html
@@ -4,9 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
   <title>Page Not Found</title>
 </head>
 <body>
-  <h1>Page Not Found</h1>
+  <header class="main-header">
+    <nav class="main-header__nav">
+      <ul class="main-header__item-list">
+        <li class="main-header__item"><a href="/shop">Shop</a></li>
+        <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Page Not Found</h1>
+  </main>
 </body>
 </html>
