--- a/05-basic-expressjs/views/add-product.html
+++ b/05-basic-expressjs/views/add-product.html
@@ -4,21 +4,26 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <link rel="stylesheet" type="text/css" href="/css/product.css">
   <title>Add Product</title>
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="/shop">Shop</a></li>
-        <li><a href="/admin/add-product">Add Product</a></li>
+  <header class="main-header">
+    <nav class="main-header__nav">
+      <ul class="main-header__item-list">
+        <li class="main-header__item"><a href="/shop">Shop</a></li>
+        <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-    <form action="/admin/product" method="POST">
-      <input type="text" name="title">
+    <form class="product-form" action="/admin/product" method="POST">
+      <div class="form-control">
+        <label for="title">Title</label>
+        <input type="text" name="title" id="title">
+      </div>
       <button type="submit">Add Product</button>
     </form>
   </main>
