--- a/05-basic-expressjs/views/shop.html
+++ b/05-basic-expressjs/views/shop.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="/css/main.css">
   <title>Shop</title>
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="/shop">Shop</a></li>
-        <li><a href="/admin/add-product">Add Product</a></li>
+  <header class="main-header">
+    <nav class="main-header__nav">
+      <ul class="main-header__item-list">
+        <li class="main-header__item"><a href="/shop">Shop</a></li>
+        <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
       </ul>
     </nav>
   </header>
