feat: serve dynamic pages with EJS instead of static html

--- a/05-basic-expressjs/public/css/main.css
+++ b/05-basic-expressjs/public/css/main.css
@@ -1,7 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   padding: 0;
   margin: 0;
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 main {
@@ -39,6 +46,64 @@ main {
 }
 
 .main-header__item a:hover,
-.main-header__item a:active {
+.main-header__item a:active,
+.main-header__item .active {
   color: #0a1b80;
 }
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: stretch;
+}
+
+.card {
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+}
+
+.card__header,
+.card__content {
+  padding: 1rem;
+}
+
+.card__header h1,
+.card__content h1,
+.card__content h2,
+.card__content p {
+  margin: 0;
+}
+
+.card__image {
+  width: 100%;
+}
+
+.card__image img {
+  width: 100%;
+}
+
+.card__actions {
+    padding: 1rem;
+    text-align: center;
+}
+
+.card__actions button,
+.card__actions a {
+    margin: 0 0.25rem;
+}
+
+button {
+  font: inherit;
+  border: 1px solid blue;
+  color: #1d167c;
+  background-color: white;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+button:hover,
+button:active {
+  color: white;
+  background-color: #1d167c;
+}
+
