--- a/05-basic-expressjs/views/admin/add-product.ejs
+++ b/05-basic-expressjs/views/admin/add-product.ejs
@@ -1,9 +1,9 @@
-<%- include('./includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
   <link rel="stylesheet" type="text/css" href="/css/product.css">
   <link rel="stylesheet" type="text/css" href="/css/forms.css">
 </head>
 <body>
-  <%- include('./includes/navigation.ejs') %> 
+  <%- include('../includes/navigation.ejs') %> 
 
   <main>
     <form class="product-form" action="/admin/product" method="POST">
