--- a/05-basic-expressjs/views/shop/product-list.ejs
+++ b/05-basic-expressjs/views/shop/product-list.ejs
@@ -1,7 +1,7 @@
-<%- include('./includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
 </head>
 <body>
-  <%- include('./includes/navigation.ejs') %> 
+  <%- include('../includes/navigation.ejs') %> 
 
   <main>
     <% if (prods.length > 0) { %> 
