--- a/05-basic-expressjs/views/404.ejs
+++ b/05-basic-expressjs/views/404.ejs
@@ -1,7 +1,7 @@
 <%- include('./includes/head.ejs') %>
 </head> 
 <body>
-  <%- include('./includes/navigation.ejs') %>;
+  <%- include('./includes/navigation.ejs') %>
   <main>
     <h1>Page Not Found!</h1>
   </main>
