--- a/05-basic-expressjs/public/css/main.css
+++ b/05-basic-expressjs/public/css/main.css
@@ -87,6 +87,8 @@ main {
 .card__actions {
     padding: 1rem;
     text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 .card__actions button,
@@ -104,6 +106,11 @@ button {
   outline: none;
   cursor: pointer;
   padding: 0.5rem 1rem;
+}
+
+button a {
+  text-decoration: none;
+  color: inherit;
 }
 
 button:hover {
