--- a/05-basic-expressjs/views/includes/navigation.ejs
+++ b/05-basic-expressjs/views/includes/navigation.ejs
@@ -1,6 +1,7 @@
 <header class="main-header">
   <nav class="main-header__nav">
     <ul class="main-header__item-list">
+      <!-- ANCHOR User routes -->
       <li class="main-header__item">
         <a class="<%= path === '/' ? 'active' : '' %>" href="/">Shop</a>
       </li>
@@ -10,7 +11,11 @@
       <li class="main-header__item">
         <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
       </li>
+      <li class="main-header__item">
+        <a class="<%= path === '/orders' ? 'active' : '' %>" href="/orders">Orders</a>
+      </li>
 
+      <!-- ANCHOR Admin routes -->
       <li class="main-header__item">
         <a class="<%= path === '/admin/add-product' ? 'active' : '' %>" href="/admin/add-product">Add Product</a>
       </li>
