--- a/05-basic-expressjs/views/shop/index.ejs
+++ b/05-basic-expressjs/views/shop/index.ejs
@@ -7,21 +7,21 @@
     <% if (prods.length > 0) { %> 
       <div class="grid">
         <% for (let product of prods) { %> 
-        <article class="card product-item">
-          <header class="card__header">
-            <h1 class="product__title"><%= product.title %></h1>
-          </header>
-          <div class="card__image">
-            <img src="https://m.media-amazon.com/images/I/51eaUAjgiwL.jpg" alt="cover-algorithms-to-live-by">
-          </div>
-          <div class="card__content">
-            <h2 class="product__price">$12.95</h2>
-            <p class="product__description">The computer science of human decisions</p>
-          </div>
-          <div class="card__actions">
-            <button class="btn">Add to Cart</button>
-          </div>
-        </article>
+          <article class="card product-item">
+            <header class="card__header">
+              <h1 class="product__title"><%= product.title %></h1>
+            </header>
+            <div class="card__image">
+              <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+            </div>
+            <div class="card__content">
+              <h2 class="product__price">$<%= product.price %></h2>
+              <p class="product__description"><%= product.description %></p>
+            </div>
+            <div class="card__actions">
+              <button class="btn">Add to Cart</button>
+            </div>
+          </article>
         <% } %> 
       </div>
     <% } else { %> 
