--- a/05-basic-expressjs/views/shop/product-list.ejs
+++ b/05-basic-expressjs/views/shop/product-list.ejs
@@ -12,14 +12,16 @@
             <h1 class="product__title"><%= product.title %></h1>
           </header>
           <div class="card__image">
-            <img src="https://m.media-amazon.com/images/I/51eaUAjgiwL.jpg" alt="cover-algorithms-to-live-by">
+            <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
           </div>
           <div class="card__content">
-            <h2 class="product__price">$12.95</h2>
-            <p class="product__description">The computer science of human decisions</p>
+            <h2 class="product__price">$<%= product.price %></h2>
+            <p class="product__description"><%= product.description %></p>
           </div>
           <div class="card__actions">
-            <button class="btn">Add to Cart</button>
+            <form action="/add-to-cart:<%= product.id %>" method="POST">
+              <button class="btn" type="submit">Add to Cart</button>
+            </form>
           </div>
         </article>
         <% } %> 
