--- a/05-basic-expressjs/public/css/main.css
+++ b/05-basic-expressjs/public/css/main.css
@@ -15,6 +15,10 @@ main {
   padding: 1rem;
 }
 
+.centered {
+  text-align: center;
+}
+
 .main-header {
   width: 100%;
   height: 3rem;
@@ -62,6 +66,7 @@ main {
 .card {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   margin: 1rem 0.5rem;
+  border-radius: 0.5rem;
 }
 
 .card__header,
@@ -78,10 +83,16 @@ main {
 
 .card__image {
   width: 100%;
+  background-repeat: no-repeat;
+  background-size: contain;
+  display: flex;
+  justify-content: center;
 }
 
 .card__image img {
-  width: 100%;
+  width: auto;
+  height: 100%;
+  max-height: 400px;
 }
 
 .card__actions {
