--- a/05-basic-expressjs/views/admin/product-list.ejs
+++ b/05-basic-expressjs/views/admin/product-list.ejs
@@ -19,9 +19,9 @@
             <p class="product__description"><%= product.description %></p>
           </div>
           <div class="card__actions">
-            <button class="btn">
-              <a href="/admin/edit-product:<%= product.id %>">Edit</a>
-            </button>
+            <a href="/products/<%= product.id %>">
+              <button class="btn">Detail</button>
+            </a>
             <form action="/admin/delete-product" method="POST">
               <button class="btn" type="submit">Delete</button>
             </form>
