--- a/05-basic-expressjs/views/shop/index.ejs
+++ b/05-basic-expressjs/views/shop/index.ejs
@@ -19,7 +19,12 @@
               <p class="product__description"><%= product.description %></p>
             </div>
             <div class="card__actions">
-              <button class="btn">Add to Cart</button>
+              <a href="/products/<%= product.id %>">
+                <button class="btn">Detail</button>
+              </a>
+              <form action="/add-to-cart:<%= product.id %>" method="POST">
+                <button class="btn" type="submit">Add to Cart</button>
+              </form>
             </div>
           </article>
         <% } %> 
