--- a/05-basic-expressjs/views/shop/product-detail.ejs
+++ b/05-basic-expressjs/views/shop/product-detail.ejs
@@ -3,5 +3,17 @@
 <body>
   <%- include('../includes/navigation.ejs') %> 
 
+  <main class="centered">
+    <h1><%= product.title %></h1>
+    <hr>
+    <div>
+      <img src="<%= product.imageUrl %>" alt="<%= product.title %>" height="500">
+    </div>
+    <h2><%= product.price %></h2>
+    <p><%= product.description %></p>
+    <form action="/cart" method="POST">
+      <button class="btn" type="submit">Add to Cart</button>
+    </form>
+  </main>
 </body>
 </html>
