--- a/05-basic-expressjs/views/shop/product-list.ejs
+++ b/05-basic-expressjs/views/shop/product-list.ejs
@@ -19,6 +19,9 @@
             <p class="product__description"><%= product.description %></p>
           </div>
           <div class="card__actions">
+            <a href="/products/<%= product.id %>">
+              <button class="btn">Detail</button>
+            </a>
             <form action="/add-to-cart:<%= product.id %>" method="POST">
               <button class="btn" type="submit">Add to Cart</button>
             </form>
