--- a/05-basic-expressjs/views/admin/product-list.ejs
+++ b/05-basic-expressjs/views/admin/product-list.ejs
@@ -19,8 +19,8 @@
             <p class="product__description"><%= product.description %></p>
           </div>
           <div class="card__actions">
-            <a href="/products/<%= product.id %>">
-              <button class="btn">Detail</button>
+            <a href="/admin/edit-product/<%= product.id %>?edit=true">
+              <button class="btn">Edit</button>
             </a>
             <form action="/admin/delete-product" method="POST">
               <button class="btn" type="submit">Delete</button>
