--- a/05-basic-expressjs/views/admin/product-list.ejs
+++ b/05-basic-expressjs/views/admin/product-list.ejs
@@ -23,6 +23,7 @@
               <button class="btn">Edit</button>
             </a>
             <form action="/admin/delete-product" method="POST">
+              <input type="hidden" name="productId" value="<%= product.id %>">
               <button class="btn" type="submit">Delete</button>
             </form>
           </div>
