--- a/05-basic-expressjs/views/shop/cart.ejs
+++ b/05-basic-expressjs/views/shop/cart.ejs
@@ -1,4 +1,5 @@
 <%- include('../includes/head.ejs') %>
+  <link rel="stylesheet" type="text/css" href="/css/cart.css">
 </head>
 <body>
   <%- include('../includes/navigation.ejs') %> 
@@ -7,7 +8,13 @@
       <% if (products.length > 0) { %>
         <ul>
           <% products.forEach((p) => { %>
-            <li><%= p.productData.title %> (<%= p.qty%>)</li>
+            <li class="cart__item">
+              <span><%= p.productData.title %> (<%= p.qty%>)</span>
+              <form action="/cart-delete-item" method="POST">
+                <input type="hidden" name="productId" value="<%= p.productData.id %>">
+                <button class="btn" type="submit">Delete</button>
+              </form>
+            </li>
           <% }) %>
         </ul>
       <% } else { %>
